# shelf_control

./: .gitignore  LICENSE.txt  Makefile  README.md  README.template.md  pyproject.toml  requirements.txt
scripts/: generate_readme.py
shelf_control/: __init__.py  constants.py  dashboard.py  scraping.py
shelf_control/assets/: style.css
